Bug 75582 - FILEOPEN: LO crashes with some XML files with 'rtl::MalformedUriException'
Summary: FILEOPEN: LO crashes with some XML files with 'rtl::MalformedUriException'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: BSA target:4.3.0 target:4.2.3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-02-27 17:28 UTC by Roland Seuhs
Modified: 2014-03-01 09:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
SVG-file that leads to a crash of LO-writer, when embedded into writer-document (292 bytes, image/svg+xml)
2014-02-27 17:28 UTC, Roland Seuhs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Seuhs 2014-02-27 17:28:26 UTC
Created attachment 94847 [details]
SVG-file that leads to a crash of LO-writer, when embedded into writer-document

Writer crashes when some kind of SVG-files are embedded.

To reproduce:

Open writer and embed the attached SVG-file. Writer will crash when you try to save the file.
             
I also have successfully created a odt-file with an embedded SVG-file with Libreoffice 3.5 (the version that is preinstalled on Ubuntu 12.4), that can no longer be opened with LO 4.1.4.2 on OpenSuSE. So this bug is applicable to both the FILEOPEN and FILESAVE sub components.

There seems to be a bugreport for Archlinux which seems to describe the same bug also:

https://bugs.archlinux.org/task/34878

In there, some people also report that LO3 was working fine with these SVG-files and only LO4 crashes on them, which is exactly what I am also experiencing.


Operating System: openSUSE
Version: 4.1.4.2 release
Comment 1 Stephan Bergmann 2014-02-28 17:31:11 UTC
Fixed on master towards LO 4.3 now with <http://cgit.freedesktop.org/libreoffice/core/commit/?id=29c3bb0968cb9770f7b822f5cf466314be9db825> "Handle vnd.sun.star.Package: URLs provoking MalrformedUriException" et al, requested backport to libreoffice-4-2 towards LO 4.2.3 at <https://gerrit.libreoffice.org/#/c/8399/> "fdo#75582: Handle MalformedUriException"
Comment 2 Commit Notification 2014-02-28 20:23:22 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1e3e9e514aa90ff4d8234801d86b317b6bc5d24&h=libreoffice-4-2

fdo#75582: Handle MalformedUriException


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.