Handle vnd.sun.star.Package: URLs provoking MalrformedUriException

...as e.g. happens when loading an .odt containing a Pcitures/XXX.svg stream
which in turn contains an <image xlink:href="logo.gif"/> with relative URL, e.g.
when loading the .odt generated by the instructions in fdo#75582.

Change-Id: I0d275662259bba8d582e2bd4671f0f6667060132